# Shabari

./: .easignore  .env  .env.production  .gitignore  AUTH_FLOW_FIXES_COMPLETE.md  AUTOMATIC_URL_PROTECTION.md  App.tsx  BEAUTIFUL_AESTHETIC_SUMMARY.md  BOLT_HACKATHON_SUBMISSION.md  BUILD_SOLUTIONS_SUMMARY.md  DEPLOYMENT.md  FALSE_POSITIVE_REDUCTION_COMPLETE.md  FUNCTIONALITY_VERIFICATION_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_STATUS_FILE_PROTECTION.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SMS_ML_INTEGRATION_COMPLETE.md  MANUAL_SMS_SCANNER_IMPLEMENTATION.md  MOBILE_DEPLOYMENT_GUIDE.md  NATIVE_IMPLEMENTATION_GUIDE.md  NATIVE_LOCAL_DETECTION_IMPLEMENTATION.md  OCR_IMPLEMENTATION_SUMMARY.md  OTP_INSIGHT_INTEGRATION_GUIDE.md  OTP_INSIGHT_STATUS_FIXED.md  PLAY_STORE_DATA_SAFETY_GUIDE.md  PLAY_STORE_SUBMISSION_GUIDE.md  PREMIUM_FEATURES_IMPLEMENTATION.md  PRIVACY_POLICY_WEB.md  PRIVACY_PROTECTION_IMPLEMENTATION.md  QUARANTINE_FILE_FLOW_EXPLAINED.md  QUARANTINE_FOLDER_SYSTEM_ANALYSIS.md  README.md  SETTINGS_SYSTEM_ANALYSIS.md  SHABARI_ARCHITECTURE_INVESTOR_PRESENTATION.md  SMART_QR_DETECTION_IMPLEMENTATION.md  SMART_QR_UI_ENHANCEMENT_COMPLETE.md  SMS_DETECTION_ANALYSIS_SUMMARY.md  Shabari_Pitch_Deck.md  UI_BACKEND_CONNECTION_STATUS.md  WEB_COMPATIBILITY_FIX.md  (+111 more)
ShabariFixed/: app.json  package-lock.json  package.json
react-native-yara-engine/: INSTALLATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  README.md  app.plugin.js  index.d.ts  index.js  package.json
react-native-yara-engine/android/: build.gradle
react-native-yara-engine/android/src/main/cpp/: CMakeLists.txt  yara-engine.cpp  yara-engine.h  yara-implementation.cpp
react-native-yara-engine/android/src/main/cpp/yara/include/: yara.h
react-native-yara-engine/test-files/: TEST_DOCUMENTATION.md  clean_test.txt  fake_whatsapp_test.txt  malicious_apk_test.txt
src/components/: ActionGrid.tsx  Button.tsx  Card.tsx  Header.tsx  ManualToolsGrid.tsx  PremiumUpgrade.tsx  StartupInitializer.tsx  StatsDisplay.tsx  index.ts
src/examples/: ManualSMSExamples.ts
src/lib/: UniversalServices.ts  compatibilityShims.ts  mlKitMock.ts  supabase.ts
src/lib/otp-insight-library/: README.md  SETUP_GUIDE.md  implement.md  package.json  tsconfig.json
src/navigation/: AppNavigator.tsx
src/screens/: DashboardScreen.tsx  FeatureManagementScreen.tsx  LiveQRScannerScreen.tsx  LoginScreen.tsx  ManualSMSScannerScreen.tsx  MessageAnalysisScreen.tsx  OnboardingScreen.tsx  QuarantineScreen.tsx  SMSScannerScreen.tsx  ScanResultScreen.tsx  SecureBrowserScreen.tsx  SettingsScreen.tsx
src/services/: AutoInitializationService.ts  ClipboardURLMonitor.ts  ExpoNotificationService.ts  GlobalGuardController.ts  ManualSMSAnalyzer.ts  NativeFileScanner.ts  OCRService.ts  OtpInsightService.ts  PhotoFraudDetectionService.ts  PrivacyGuardService.ts  QRScannerService.ts  SMSReaderService.ts  ScannerService.ts  ShareIntentService.ts  URLProtectionService.ts  WatchdogFileService.ts  YaraSecurityService.ts
src/stores/: authStore.ts  featurePermissionStore.ts  subscriptionStore.ts
src/theme/: index.ts
(+18 files in other folders)
